# DokkaebiTerminal

./: .gitignore  Cargo.toml  NOTICE  README.md  notes.md  plan.md  typos.toml
assets/: release_notes.md
assets/claude-plugins/.claude-plugin/: marketplace.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: cursor.json  emacs.json  jetbrains.json
assets/keymaps/macos/: cursor.json  emacs.json  jetbrains.json
assets/locales/: en.json  ko.json
assets/settings/: default.json  initial_user_settings.json
crates/acp_thread/src/: acp_thread.rs  connection.rs  mention.rs
crates/acp_tools/src/: acp_tools.rs
crates/action_log/src/: action_log.rs
crates/activity_indicator/: Cargo.toml
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  native_agent_server.rs  thread.rs  thread_store.rs  tool_permissions.rs  tools.rs
crates/agent_servers/: Cargo.toml
crates/agent_servers/src/: acp.rs  agent_servers.rs  custom.rs  e2e_tests.rs
crates/agent_settings/src/: agent_profile.rs  agent_settings.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_diff.rs  agent_panel.rs  agent_ui.rs  completion_provider.rs  config_options.rs  conversation_view.rs  entry_view_state.rs  favorite_models.rs  inline_assistant.rs  inline_prompt_editor.rs  language_model_selector.rs  mention_set.rs  message_editor.rs  mode_selector.rs  model_selector.rs  profile_selector.rs  test_support.rs  text_thread_editor.rs  text_thread_history.rs  thread_metadata_store.rs  thread_worktree_picker.rs  threads_archive_view.rs  ui.rs
crates/ai_onboarding/: Cargo.toml
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs  agent_panel_onboarding_content.rs  ai_onboarding.rs  ai_upsell_card.rs  edit_prediction_onboarding_content.rs  plan_definitions.rs
crates/anthropic/src/: anthropic.rs
crates/assistant_text_thread/src/: assistant_text_thread_tests.rs  context_server_command.rs
crates/audio/src/: audio_pipeline.rs
crates/bedrock/: Cargo.toml
crates/bedrock/src/: models.rs
crates/buffer_diff/src/: buffer_diff.rs
crates/claude_plugin_registry/: Cargo.toml
crates/claude_plugin_registry/src/: lib.rs
crates/claude_subagent_view/: Cargo.toml
crates/claude_subagent_view/src/: claude_subagent_view.rs  process_snapshot.rs  state.rs  view.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  main.rs
crates/client/src/: client.rs  telemetry.rs  test.rs  user.rs  zed_urls.rs
crates/cloud_api_types/src/: plan.rs
crates/collab_ui/src/: collab_panel.rs  notification_panel.rs
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs
crates/component_preview/examples/: component_preview.rs
crates/copilot_chat/src/: copilot_chat.rs
crates/copilot_ui/: Cargo.toml
crates/copilot_ui/src/: sign_in.rs
crates/crashes/: Cargo.toml
crates/crashes/src/: crashes.rs
crates/debugger_ui/src/: debugger_panel.rs
crates/deepseek/src/: deepseek.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: buffer_diagnostics.rs  diagnostic_renderer.rs  diagnostics.rs  items.rs  toolbar_controls.rs
crates/edit_prediction/: Cargo.toml
crates/edit_prediction/src/: edit_prediction.rs  onboarding_modal.rs  zed_edit_prediction_delegate.rs  zeta.rs
crates/edit_prediction_types/src/: edit_prediction_types.rs
crates/edit_prediction_ui/src/: edit_prediction_button.rs  rate_prediction_modal.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  code_context_menus.rs  display_map.rs  document_colors.rs  edit_prediction_tests.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  hover_popover.rs  inlays.rs  items.rs  mouse_context_menu.rs  movement.rs  runnables.rs  scroll.rs  signature_help.rs  split.rs
crates/encoding_selector/: Cargo.toml
crates/encoding_selector/src/: encoding_selector.rs
crates/etw_tracing/: Cargo.toml  etw_tracing.rs
crates/extension/src/: extension_builder.rs
crates/extension_api/src/: extension_api.rs
crates/extension_host/src/: extension_host.rs  extension_store_test.rs  (+1 more)
crates/extensions_ui/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git/: Cargo.toml
crates/git_graph/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/github_update/: Cargo.toml
crates/github_update/src/: github_update.rs
crates/gpui/: Cargo.toml
crates/i18n/: Cargo.toml
crates/i18n/src/: i18n.rs
crates/keymap_editor/: Cargo.toml
crates/language_model/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/notepad_panel/: Cargo.toml
crates/notepad_panel/src/: notepad_panel.rs
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/project/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/prompt_palette/: Cargo.toml
crates/prompt_palette/src/: placeholder.rs  prompt_fill_modal.rs  prompt_form_modal.rs  prompt_palette.rs  prompt_store.rs
crates/recent_projects/: Cargo.toml
crates/remote_connection/: Cargo.toml
crates/rules_library/: Cargo.toml
crates/search/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/system_monitor/: Cargo.toml
crates/system_monitor/src/: gpu_windows.rs  lib.rs  metrics_collector.rs  system_monitor.rs
crates/tab_switcher/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal_history/: Cargo.toml
crates/terminal_history/src/: history_source.rs  terminal_history.rs
crates/terminal_view/: Cargo.toml
crates/theme_selector/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/toolchain_selector/: Cargo.toml
crates/ui/: Cargo.toml
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml  build.rs
legal/: third-party-terms.md
script/: bundle-windows.ps1  generate-licenses.ps1  i18n_cleanup.py  i18n_descriptions.py  i18n_titles.py
setup/: dokkaebi.iss
(+299 files in other folders)
