[package]
name = "claude_subagent_view"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/claude_subagent_view.rs"
doctest = false

[dependencies]
collections.workspace = true
editor.workspace = true
gpui.workspace = true
i18n.workspace = true
language.workspace = true
log.workspace = true
serde.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
