[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cli.rs"
doctest = false

# bin name은 "dokkaebi-cli"로 고정 — Claude Code 알림 브리지 플러그인의
# dispatch.sh가 PATH/설치 경로에서 이 이름을 직접 탐색한다.
# 상류 Zed는 bin name이 "cli"이므로 백포트 시 이 라인을 그대로 유지할 것.
[[bin]]
name = "dokkaebi-cli"
path = "src/main.rs"

[features]
no-bundled-uninstall = []
default = []

[dependencies]
anyhow.workspace = true
askpass.workspace = true
clap.workspace = true
collections.workspace = true
ipc-channel = "0.19"
parking_lot.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
util.workspace = true
tempfile.workspace = true
rayon.workspace = true
walkdir = "2.5"

[dev-dependencies]
serde_json.workspace = true
util = { workspace = true, features = ["test-support"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
exec.workspace = true
fork.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-services = "0.2"
plist = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
