[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cli.rs"
doctest = false

# bin name은 "dokkaebi-cli"로 고정 — Claude Code 알림 브리지 플러그인의
# dispatch.sh가 PATH/설치 경로에서 이 이름을 직접 탐색한다.
# 상류 Zed는 bin name이 "cli"이므로 백포트 시 이 라인을 그대로 유지할 것.
[[bin]]
name = "dokkaebi-cli"
path = "src/main.rs"

[features]
no-bundled-uninstall = []
default = []

[dependencies]
anyhow.workspace = true
askpass.workspace = true
clap.workspace = true
collections.workspace = true
ipc-channel = "0.19"
parking_lot.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
util.workspace = true
tempfile.workspace = true
rayon.workspace = true
walkdir = "2.5"

[dev-dependencies]
serde_json.workspace = true
util = { workspace = true, features = ["test-support"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
exec.workspace = true
fork.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-services = "0.2"
plist = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
# dokkaebi-cli.exe 바이너리에만 Windows 아이콘/메타데이터를 임베드.
# winresource 대신 embed-resource를 쓰는 이유: cli 크레이트는 [lib] + [[bin]]
# 이중 구조이고 zed 크레이트가 cli lib를 의존한다. winresource::compile()이
# emit하는 `cargo:rustc-link-lib`는 rlib 메타데이터에 기록되어 dokkaebi.exe
# 링크 시까지 전파되면 zed 자체 VERSION 리소스와 충돌(CVT1100)한다.
# embed-resource의 `compile_for`는 `cargo:rustc-link-arg-bin=<bin>=<lib>`로
# 특정 바이너리 타겟에만 리소스를 연결하여 lib rlib에 전파되지 않는다.
embed-resource = "3"
