[package]
name = "github_update"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/github_update.rs"
doctest = false

[dependencies]
anyhow.workspace = true
dirs.workspace = true
futures-lite.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
release_channel.workspace = true
semver.workspace = true
serde.workspace = true
settings.workspace = true
serde_json.workspace = true
smol.workspace = true
util.workspace = true
