[package]
name = "notepad_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notepad_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
i18n.workspace = true
language.workspace = true
log.workspace = true
paths.workspace = true
project.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true
