[package]
name = "prompt_palette"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/prompt_palette.rs"
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
editor.workspace = true
fuzzy.workspace = true
gpui.workspace = true
i18n.workspace = true
language.workspace = true
paths.workspace = true
picker.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
ui_input.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true
zed_actions.workspace = true
