[package]
name = "system_monitor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
gpui.workspace = true
settings.workspace = true
settings_content.workspace = true
sysinfo.workspace = true
ui.workspace = true
workspace.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
