[package]
name = "terminal_history"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/terminal_history.rs"
doctest = false

[dependencies]
anyhow.workspace = true
dirs.workspace = true
fuzzy.workspace = true
gpui.workspace = true
i18n.workspace = true
picker.workspace = true
serde_json.workspace = true
terminal.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
zed_actions.workspace = true
